fix: spacing fix

--- a/style.css
+++ b/style.css
@@ -329,10 +329,9 @@ textarea:focus {
 }
 
 .container-divider {
-  margin-bottom: 20px;
   margin-top: 100px;
   display: block;
-  height: 20px;
+  height: 10px;
 }
 @media (max-width: 768px) {
   .container-divider {
