--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -143,10 +143,9 @@ textarea {
 }
 
 .container-divider {
-  margin-bottom: 20px;
   margin-top: 100px;
   display: block;
-  height: 20px;
+  height: 10px;
   @include mobile {
     margin-top: 60px;
   }
